--- a/src/Topxia/AdminBundle/Resources/views/Group/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Group/index.html.twig
@@ -32,7 +32,7 @@
     <thead>
     <tr>
       <th>{{'编号'|trans}}</th>
-      <th width="20%">{{'名称'|trans) }}</th>
+      <th width="20%">{{'名称'|trans }}</th>
       <th>{{'组长'|trans}}</th>
       <th>{{'成员数'|trans}}</th>
       <th>{{'话题数'|trans}}</th>
@@ -67,7 +67,7 @@
       <form  class="form-horizontal" method="post" id="transfer-group-form" >
         <div class="modal-body">
               <div class="form-group">
-                <label class="col-xs-2 control-label" for="user_nickname">{{'转移给'|trans) }}</label>
+                <label class="col-xs-2 control-label" for="user_nickname">{{'转移给'|trans }}</label>
                 <div class="col-xs-7 controls">
                   <input type="text"  id="username" name="user[nickname]" class="form-control"
                   data-url="{{path('group_thread_check_user')}}" data-display="{{'用户名'|trans}}"  placeholder="{{'请输入用户名'|trans}}">
