--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
@@ -20,7 +20,7 @@
 
 			<div class="btn-group">
 			  <button type="button" class="btn btn-sm btn-success dropdown-toggle" data-toggle="dropdown">
-			    <i class="glyphicon glyphicon-plus"></i>{{'%chapter_name%'|trans({'%chapter_name%': setting('default.chapter_name')|default('章'|trans)})}}/{{'%part_name%'|trans({'%part_name%': setting{'default.part_name')|default('节'|trans)})}} <span class="caret"></span>
+			    <i class="glyphicon glyphicon-plus"></i>{{'%chapter_name%'|trans({'%chapter_name%': setting('default.chapter_name')|default('章'|trans)})}}/{{'%part_name%'|trans({'%part_name%': setting('default.part_name')|default('节'|trans)})}} <span class="caret"></span>
 			  </button>
 			  <ul class="dropdown-menu" role="menu">
 			    <li>
