--- a/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
@@ -39,13 +39,9 @@
             <a href="javascript:;" class="collect-btn link-dark" data-url="{{ path('group_thread_collect', {threadId:threadMain.id}) }}" {% if isCollected == true %} style="display:none;"{% endif %}><i class="es-icon es-icon-favoriteoutline mrs"></i>{{'收藏'|trans}}</a>
           {% endif %}
         </div>
-<<<<<<< HEAD
-        {{'发表于'|trans}} {{ threadMain.createdTime|smart_time }}
-        <span class="mll">{{'%hitNum%次查看'|trans({'hitNum': threadMain.hitNum}) }}</span>
-=======
+
         {{'发表于%createdTime%'|trans({'%createdTime%':threadMain.createdTime|smart_time})}} 
         <span class="mll"> {{'%hitNum%次查看'|trans({'%hitNum%':threadMain.hitNum})}}</span>
->>>>>>> origin/feature/fill-topxiaweb-twig-translate-zc
       </div>
 
       {{threadMain.content|raw}}
@@ -54,11 +50,7 @@
         <span class="glyphicon glyphicon-paperclip"></span> {{'附件下载'|trans}} :
         <div class="row clearfix mtm">
           {% for attach in attachs %}
-<<<<<<< HEAD
-            <div class="pull-left attach col-md-4 col-sm-6 col-lg-4"  data-toggle="tooltip" data-placement="top" title="{% if  attach.description %}{{'描述：%description%'|trans({'%description%': attach.description}}{% endif %}  {{'上传于%createdTime%'|trans({'%createdTime%': files[attach.fileId].createdTime|smart_time})}}">
-=======
             <div class="pull-left attach col-md-4 col-sm-6 col-lg-4"  data-toggle="tooltip" data-placement="top" title="{% if  attach.description %}{{'描述：%description%'|trans({'%description%':attach.description})}}{% endif %}  {{'上传于 %createdTime%'|trans({'%createdTime%':files[attach.fileId].createdTime|smart_time})}}">
->>>>>>> origin/feature/fill-topxiaweb-twig-translate-zc
               {% if attach.coin > 0  and   user.id != attach.userId and app.user %}
                 <a href="javascript:" data-toggle="modal" data-target="#modal" data-urL="{{path('group_thread_buy_attach',{attachId:attach.id})}}" class="pull-left mrm"><img src="{{ default_path(attach.title|file_type(".png")) }}" class="avatar-md"></a>
               {% else %}
@@ -76,19 +68,11 @@
                 <div class="content" style="color: #999;font-size:11px;">
                   {{files[attach.fileId].size|file_size}}
                   {% if attach.coin > 0 %}
-<<<<<<< HEAD
-                    <span class="mls">{{'售价:%coin%%name%'|trans({'%coin%': attach.coin,'%name%': setting('coin').coin_name})}}</span>
-                    {% else %}
-                    <span class="mls">{{'免费'|trans}}</span>
-                  {% endif %}
-                  <br>{{'下载次数：%hitNum%'|trans({'%hitNum%': attach.hitNum})}}
-=======
                     <span class="mls">{{'售价:%coin%%coin_name%'|trans({'%coin%':attach.coin,'%coin_name%':setting('coin').coin_name})}}</span>
                     {% else %}
                     <span class="mls">{{'免费'|trans}}</span>
                   {% endif %}
                   <br>{{'下载次数：%hitNum%'|trans({'%hitNum%':attach.hitNum})}}
->>>>>>> origin/feature/fill-topxiaweb-twig-translate-zc
                 </div>
               </div>
             </div>
@@ -261,7 +245,7 @@
             <div class="row clearfix mtm">
               {% for attach in postAttachs[post.id] %}
                 {% set postFile = postFiles[post.id] %}
-                <div class="pull-left attach col-md-4 col-sm-6 col-lg-4"  data-toggle="tooltip" data-placement="top" title="{% if  attach.description %}{{'描述：%description%'|trans({'%description%': attach.description}}{% endif %}  {{'上传于%createdTime%'|trans({'%createdTime%': postFile[attach.fileId].createdTime|smart_time})}}">
+                <div class="pull-left attach col-md-4 col-sm-6 col-lg-4"  data-toggle="tooltip" data-placement="top" title="{% if  attach.description %}{{'描述：%description%'|trans({'%description%': attach.description})}} {% endif %}  {{'上传于%createdTime%'|trans({'%createdTime%': postFile[attach.fileId].createdTime|smart_time})}}">
                   {% if attach.coin > 0  and app.user and  user.id != attach.userId %}
                     <a href="javascript:" data-toggle="modal" data-target="#modal" data-urL="{{path('group_thread_buy_attach',{attachId:attach.id})}}" class="pull-left mrm"><img src="{{ default_path(attach.title|file_type(".png")) }}" class="avatar-md"></a>
                   {% else %}
@@ -282,11 +266,7 @@
                         {% else %}
                         <span class="mls">{{'免费'|trans}}</span>
                       {% endif %}
-<<<<<<< HEAD
-                      <br>{{'下载次数：%hitNum%'|trans({'%hitNum%': attach.hitNum})}}
-=======
                       <br>{{'下载次数：%hitNum%'|trans({'%hitNum%':attach.hitNum})}}
->>>>>>> origin/feature/fill-topxiaweb-twig-translate-zc
                     </div>
                     {% if user.id==post.userId or is_granted('ROLE_ADMIN')  or is_groupmember==3  or is_groupmember==2 %}
                       <a title="{{'确定删除此附件'|trans}}" class="mhm post-delete-btn" href="javascript:" data-url="{{path('group_thread_delete_attach',{goodsId:attach.id})}}">{{'删除'|trans}}</a>
