完成资料库翻译

--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Player/global-video-player.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Player/global-video-player.html.twig
@@ -47,7 +47,7 @@
 
       {% include 'TopxiaWebBundle::script_boot.html.twig' with {script_main: asset('bundles/topxiaweb/js/app.js')} %}
     {% else %}
-      <div class=""><br>&nbsp;&nbsp;&nbsp;&nbsp;该浏览器不支持云视频播放，请前往<a href="{{path('mobile')}}" target="parent">下载App</a>。</div>
+      <div class=""><br>&nbsp;&nbsp;&nbsp;&nbsp;{{'该浏览器不支持云视频播放，请前往'|trans}}<a href="{{path('mobile')}}" target="parent">{{'下载App'|trans}}</a>。</div>
     {% endif %}
   </body>
 </html>
