--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/layout.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/layout.html.twig
@@ -14,7 +14,7 @@
 <div class="panel panel-default panel-col">
 
 	<div class="panel-heading">
-		教学资料库
+		{{'教学资料库'|trans}}
 	</div>
 
 	<div class="panel-body material-body">
