--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/MyShare/material-share-history-detail.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/MyShare/material-share-history-detail.html.twig
@@ -1,7 +1,7 @@
 <div class="history-detail">
 <tr>
-    <th width="50%" class="text-center">时间</th>
-    <th width="50%" class="text-center">描述</th>
+    <th width="50%" class="text-center">{{'时间'|trans}}</th>
+    <th width="50%" class="text-center">{{'描述'|trans}}</th>
 </tr>
 
 
@@ -11,14 +11,16 @@
     <td class="text-center">{{ history['createdTime']|date('Y-n-d H:i') }}</td>
     <td class="text-center">
         {% if history['isActive'] %}
-            分享给{{ (targetUsers[history['targetUserId']])['nickname'] }}
+          {{'分享给%nickname%'|trans({'%nickname%':(targetUsers[history['targetUserId']])['nickname']})}}
+            {# 分享给{{ (targetUsers[history['targetUserId']])['nickname'] }} #}
         {% else %}
-            取消与{{ (targetUsers[history['targetUserId']])['nickname'] }}的分享
+          {{'取消与%nickname%的分享'|trans({'%nickname%':(targetUsers[history['targetUserId']])['nickname']})}}
+            {# 取消与{{ (targetUsers[history['targetUserId']])['nickname'] }}的分享 #}
         {% endif %}
     </td>
 </tr>
 {% else %}
-<tr class="empty"><td colspan="3">无资料分享记录</td></tr>
+<tr class="empty"><td colspan="3">{{'无资料分享记录'|trans}}</td></tr>
 {% endfor %}
 </div>
 <input class="js-page" type="hidden" name="page" value="{{ paginator.currentPage|default(1) }}">
@@ -27,7 +29,7 @@
 <nav class=" {{ class|default('text-center') }}">
   <ul class="pagination" data-url="{{ path('material_lib_my_sharing_detail') }}">
     {% if paginator.currentPage != paginator.firstPage %}
-      <li data-page="{{paginator.firstPage}}"><a  href="javascript:;">首页</a></li>
+      <li data-page="{{paginator.firstPage}}"><a  href="javascript:;">{{'首页'|trans}}</a></li>
       <li data-page="{{paginator.previousPage}}"><a  href="javascript:;"><i class="es-icon es-icon-chevronleft"></i></a></li>
     {% endif %}
     {% for page in paginator.pages %}
@@ -36,7 +38,7 @@
 
     {% if paginator.currentPage != paginator.lastPage %}
       <li data-page="{{paginator.nextPage}}"><a  href="javascript:;"><i class="es-icon es-icon-chevronright"></i></a></li>
-      <li data-page="{{paginator.getLastPage}}"><a  href="javascript:;">尾页</a></li>
+      <li data-page="{{paginator.getLastPage}}"><a  href="javascript:;">{{'尾页'|trans}}</a></li>
     {% endif %}
   </ul>
 </nav>
