--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/MyShare/share-my-materials.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/MyShare/share-my-materials.html.twig
@@ -1,29 +1,29 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
 {% set modalSize = 'large' %}
-{% block title %}分享教学资料{% endblock %}
+{% block title %}{{'分享教学资料'|trans}}{% endblock %}
 {% block body %}
 
-<script type="text/javascript">
-$("#target-teachers-input").select2({
-	multiple: true,
-	data:[
-		{% for contact in allTeachers %}
-			{% if contact.id != currentUserId %}
-		  		{id: '{{ contact.id }}', text: '{{ contact.nickname }}'},
-		  	{% endif %}
-		{% endfor %}
-	  	]
-});
-</script>
+// <script type="text/javascript">
+// $("#target-teachers-input").select2({
+// 	multiple: true,
+// 	data:[
+// 		{% for contact in allTeachers %}
+// 			{% if contact.id != currentUserId %}
+// 		  		{id: '{{ contact.id }}', text: '{{ contact.nickname }}'},
+// 		  	{% endif %}
+// 		{% endfor %}
+// 	  	]
+// });
+// </script>
 
 <form id="share-materials-form" class="form-horizontal" method="post"
 	action="{{ path('material_lib_save_sharing') }}">
 
 	<div class="row form-group">
-		<label class="col-md-3 control-label">分享教学资料给</label>
+		<label class="col-md-3 control-label">{{'分享教学资料给'|trans}}</label>
 		<div class="col-md-8 controls">
 			<div class="select2-container select2-container-multi width-full"
-				id="target-teachers-input" placeholder="输入用户名"></div>
+				id="target-teachers-input" placeholder="{{'输入用户名'|trans}}"></div>
 		</div>
 	</div>
 </form>
@@ -32,7 +32,7 @@ $("#target-teachers-input").select2({
 {% endblock %} {% block footer %}
 <button id="share-materials-form-submit" type="submit"
 	class="btn btn-primary pull-right" data-toggle="form-submit"
-	data-target="#share-materials-form" data-submiting-text="正在保存...">保存</button>
+	data-target="#share-materials-form" data-submiting-text="{{'正在保存...'|trans}}">{{'保存'|trans}}</button>
 <button type="button" class="btn btn-link pull-right"
-	data-dismiss="modal">取消</button>
+	data-dismiss="modal">{{'取消'|trans}}</button>
 {% endblock %}
