--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Widget/thumbnail.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Widget/thumbnail.html.twig
@@ -13,7 +13,7 @@
       class="glyphicon glyphicon-star js-collect-btn left {% if collections[uploadFile.id]|default(0) %} material-collection {% endif %}"
       data-toggle="tooltip"
       data-placement="bottom"
-      title="收藏"
+      title="{{'收藏'|trans}}"
       data-url="{{ path('material_lib_save_collection', {fileId:uploadFile.id}) }}"
     ></i>
     <i
@@ -27,7 +27,7 @@
       {% if uploadFile.createdUserId == app.user.id %}
         <li>
           <a href="javascript:;" class="js-detail-btn" data-toggle="tooltip" data-placement="bottom" data-url="{{ path('material_lib_file_detail', {fileId:uploadFile.id}) }}">
-            <i class="glyphicon glyphicon-pencil prm"></i>编辑
+            <i class="glyphicon glyphicon-pencil prm"></i>{{'编辑'|trans}}
           </a>
         </li>
       {% endif %}
@@ -35,14 +35,14 @@
       {% if uploadFile.storage == "cloud" and uploadFile.createdUserId != app.user.id %}
         <li>
           <a href="javascript:;" class="js-detail-btn" data-toggle="tooltip" data-placement="bottom" data-url="{{ path('material_lib_file_detail', {fileId:uploadFile.id}) }}">
-            <i class="glyphicon glyphicon-eye-open prm"></i>查看
+            <i class="glyphicon glyphicon-eye-open prm"></i>{{'查看'|trans}}
           </a>
         </li>
       {% endif %}
 
       <li>
         <a href="javascript:;"  data-url="{{ path('material_download', {fileId:uploadFile.id}) }}" class="js-download-btn" data-toggle="tooltip" data-placement="bottom" >
-          <i class="glyphicon glyphicon-save prm"></i>下载
+          <i class="glyphicon glyphicon-save prm"></i>{{'下载'|trans}}
         </a>
       </li>
 
@@ -51,13 +51,13 @@
         {% if uploadFile.isPublic %}
           <li>
             <a href="javascript:;" class="js-unshare-btn" data-toggle="tooltip" data-placement="bottom" data-url="{{ path('material_unshare', {fileId:uploadFile.id}) }}">
-              <i class="es-icon es-icon-share prm"></i>取消共享
+              <i class="es-icon es-icon-share prm"></i>{{'取消共享'|trans}}
             </a>
           </li>
         {% else %}
             <li>
             <a href="javascript:;" class="js-share-btn" data-toggle="tooltip" data-placement="bottom" data-file-id="{{ uploadFile.id }}" data-url="{{ path('material_batch_share') }}">
-              <i class="es-icon es-icon-share prm"></i>共享
+              <i class="es-icon es-icon-share prm"></i>{{'共享'|trans}}
             </a>
           </li>
         {% endif %}
@@ -65,7 +65,7 @@
         {% if source != 'public' %}
           <li>
             <a href="javascript:;"  class="js-delete-btn" data-toggle="tooltip" data-placement="bottom" data-url="{{ path('material_delete_modal_show') }}" data-id="{{uploadFile.id }}">
-              <i class="glyphicon glyphicon-trash prm"></i>删除
+              <i class="glyphicon glyphicon-trash prm"></i>{{'删除'|trans}}
             </a>
           </li>
         {% endif %}
@@ -75,12 +75,12 @@
   <div class="btn-operation">
       <!-- 选择一种状态 -->
 
-      <a class="btn btn-info" href="#modal" data-toggle="modal" data-url="{{ path('material_lib_file_preview', {fileId: uploadFile.id}) }}" >资料预览
+      <a class="btn btn-info" href="#modal" data-toggle="modal" data-url="{{ path('material_lib_file_preview', {fileId: uploadFile.id}) }}" >{{'资料预览'|trans}}
       </a>
 
       {% if uploadFile.convertStatus == 'error' %}
         {% if setting("developer.debug")|default(0) %}
-        <a class="js-reconvert-btn btn btn-warning" data-url='{{path("material_reconvert", {globalId: uploadFile.globalId})}}'>重新转码</a>
+        <a class="js-reconvert-btn btn btn-warning" data-url='{{path("material_reconvert", {globalId: uploadFile.globalId})}}'>{{'重新转码'|trans}}</a>
         {% endif %}
       {% endif %}
 
