--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/delete-file-modal.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/delete-file-modal.html.twig
@@ -23,8 +23,8 @@
 
 {% block footer %}
     <div class="pull-left pts"> 
-      <span class="text-danger">文件若被引用，删除会引起引用课时无法正常使用</span>
+      <span class="text-danger">{{'文件若被引用，删除会引起引用课时无法正常使用'|trans}}</span>
     </div>
-    <button class="btn btn-danger file-delete-form-btn" type="submit" data-toggle="form-submit" data-target="#file-delete-form" data-loading-text="正在删除...">确认</button>
+    <button class="btn btn-danger file-delete-form-btn" type="submit" data-toggle="form-submit" data-target="#file-delete-form" data-loading-text="{{'正在删除...'|trans}}">{{'确认'|trans}}</button>
     
 {% endblock %}
