--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/preview.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/preview.html.twig
@@ -2,7 +2,7 @@
 
 {% set modal_class = 'modal-lg' %}
 
-{% block title %}<span class="text-muted">资料预览</span>{% endblock %}
+{% block title %}<span class="text-muted">{{'资料预览'|trans}}</span>{% endblock %}
 
 {% block body %}
     {% if file.type in ['video', 'audio', 'ppt', 'document', 'image', 'flash'] %}
@@ -20,5 +20,5 @@
 {% endblock %}
 
 {% block footer %}
-	<button type="button" class="btn btn-primary" data-dismiss="modal">关闭</button>
+	<button type="button" class="btn btn-primary" data-dismiss="modal">{{'关闭'|trans}}</button>
 {% endblock %}
