--- a/src/Topxia/WebBundle/Resources/views/MyQuiz/my-quiz-tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyQuiz/my-quiz-tr.html.twig
@@ -22,8 +22,8 @@
 	<td>
 		{% if myTestpaperResult.status in ['doing', 'paused'] %}
 			<a href="{{ path('course_manage_show_test', {id:myTestpaperResult.id}) }}" class="btn btn-default btn-sm">{{'继续考试'|trans}}</a>
-		{% else %}
-			<a href="{{ path('course_lesson_redo_test',{lessonId:myTestpaperResult.lessonId,testId:myTestpaper.id}) }}" class="btn btn-default btn-sm">{{'再做一次'|trans}}</a>
+		{% elseif myTestpaperResult.status == 'finished' %}
+      <a href="{{ path('course_lesson_redo_test',{lessonId:myTestpaperResult.lessonId,testId:myTestpaper.id}) }}" class="btn btn-default btn-sm">{{'再做一次'|trans}}</a>
 			<a href="{{ path('course_manage_test_results', {id:myTestpaperResult.id}) }}" class="btn btn-link btn-sm" target="_blank">{{'查看结果'|trans}}</a>
 		{% endif %}
 	</td>
