--- a/src/Topxia/WebBundle/Resources/views/Coin/coin-table.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Coin/coin-table.html.twig
@@ -47,7 +47,7 @@
   {% else %}
     <tr>
       <td colspan="6">
-        <div class="empty">暂无虚拟币订单记录</div>
+        <div class="empty">{{'暂无虚拟币订单记录'|trans}}</div>
       </td>
     </tr>
   {% endfor %}
