--- a/src/Topxia/WebBundle/Resources/views/Card/moneycard-invalid.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Card/moneycard-invalid.html.twig
@@ -4,7 +4,7 @@
   <p class="price">
     <strong>{{ cardDetail.coin }}</strong>{{'%coin_name%'|trans({'%coin_name%': coin.coin_name|default('虚拟币'|trans)})}}
   </p>
-  <p>{{'有效期截止：'|trans}}<span>{{ cardDetail.deadline|date('Y年n月d日') }}</span></p>
+  <p>{{'有效期截止：'|trans}}<span>{{'%deadline%年'|trans({'%deadline%': cardDetail.deadline|date('Y')})}}{{'%deadline%月'|trans({'%deadline%': cardDetail.deadline|date('n')}) }}{{'%deadline%日'|trans({'%deadline%': cardDetail.deadline|date('d')}) }}</span></p>
   <!--学习卡已作废-->
   <div class="stamp stamp-cancel"></div>
 </div>
