完成课程部分

--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-layout.html.twig
@@ -24,7 +24,7 @@
             </a>
           {% endif %}
         {% elseif member["joinedType"] == 'groupSell'%}
-          <a class="btn btn-default setting hidden-xs hidden-sm" href="javascript:;" data-toggle="tooltip" data-placement="top" title="组合购买课程不能退出">
+          <a class="btn btn-default setting hidden-xs hidden-sm" href="javascript:;" data-toggle="tooltip" data-placement="top" title="{{'组合购买课程不能退出'|trans}}">
             <i class="hz-icon icon-exit"></i>
           </a>
         {% endif %}
