--- a/src/Topxia/WebBundle/Resources/views/CourseManage/detail.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/detail.html.twig
@@ -38,7 +38,7 @@
                 <span class="glyphicon glyphicon-resize-vertical sort-handle"></span>
                 {{ this }}
                 <input type="hidden" name="goals[]" value="{{ this }}">
-                <button class="close delete-btn" data-role="item-delete" type="button" title="{{'删除'|trans}}">&times;</button>
+                <button class="close delete-btn" data-role="item-delete" type="button" title="删除">&times;</button>
               </li>
             {% endverbatim %}
           </script>
@@ -65,7 +65,7 @@
                 <span class="glyphicon glyphicon-resize-vertical sort-handle"></span>
                 {{ this }}
                 <input type="hidden" name="audiences[]" value="{{ this }}">
-                <button class="close delete-btn" data-role="item-delete" type="button" title="{{'删除'|trans}}">&times;</button>
+                <button class="close delete-btn" data-role="item-delete" type="button" title="删除">&times;</button>
               </li>
             {% endverbatim %}
           </script>
