--- a/src/Topxia/WebBundle/Resources/views/CourseMaterialManage/file-chooser.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseMaterialManage/file-chooser.html.twig
@@ -208,14 +208,14 @@
           data-accept="{{ uploader_accept(targetType)|json_encode }}"
           data-process="{{ uploader_process(targetType) }}"
         >
-          <div class="balloon-uploader-heading">上传文件</div>
+          <div class="balloon-uploader-heading">{{'上传文件'|trans}}</div>
           <div class="balloon-uploader-body">
-            <div class="balloon-nofile">请将文件拖到这里，或点击添加文件按钮</div>
+            <div class="balloon-nofile">{{'请将文件拖到这里，或点击添加文件按钮'|trans}}</div>
             <div class="balloon-filelist">
               <div class="balloon-filelist-heading">
-                <div class="file-name">文件名</div>
-                <div class="file-size">大小</div>
-                <div class="file-status">状态</div>
+                <div class="file-name">{{'文件名'|trans}}</div>
+                <div class="file-size">{{'大小'|trans}}</div>
+                <div class="file-status">{{'状态'|trans}}</div>
               </div>
               <ul>
               </ul>
