--- a/src/Topxia/WebBundle/Resources/views/CourseTestpaperManage/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseTestpaperManage/index.html.twig
@@ -47,7 +47,7 @@
         </tbody>
       </table>
       <div>
-        <label class="checkbox-inline"><input type="checkbox" autocomplete="off" data-role="batch-select"> 全选</label>
+        <label class="checkbox-inline"><input type="checkbox" autocomplete="off" data-role="batch-select"> {{'全选'|trans}}</label>
         <button class="btn btn-default btn-sm mlm" data-role="batch-delete" data-name="{{ '试卷'|trans }}"
                 data-url="{{ path('course_manage_testpaper_deletes',{courseId:course.id}) }}">{{ '删除'|trans }}</button>
       </div>
