--- a/src/Topxia/WebBundle/Resources/views/CourseTestpaperManage/items.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseTestpaperManage/items.html.twig
@@ -133,8 +133,8 @@ tr.placeholder:before {
     {% verbatim %}
       <tr>
         <td>{{name}}</td>
-        <td>{{count}}{{'题'|trans}}</td>
-        <td>{{score}}{{'分'|trans}}</td>
+        <td>{{count}}题</td>
+        <td>{{score}}分</td>
       </tr>
     {% endverbatim %}
   </script>
