--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
@@ -188,26 +188,26 @@
   >
     <div class="file-chooser-bar" style="display:none;">
       <span data-role="placeholder"></span>
-      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> 编辑</button>
-      <div class="alert alert-warning" data-role="waiting-tip" style="display:none;">正在转换视频格式，转换需要一定的时间，期间将不能播放该视频。<br />转换完成后将以站内消息通知您。</div>
+      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> {{'编辑'|trans}}</button>
+      <div class="alert alert-warning" data-role="waiting-tip" style="display:none;">{{'正在转换视频格式，转换需要一定的时间，期间将不能播放该视频。'|trans}}<br />{{'转换完成后将以站内消息通知您。'|trans}}</div>
     </div>
 
     <div class="file-chooser-main">
       <ul class="nav nav-pills nav-pills-sm mbs file-chooser-tabs">
-        <li><a class="file-chooser-uploader-tab" href="#video-chooser-upload-pane" data-toggle="tab">上传视频</a></li>
+        <li><a class="file-chooser-uploader-tab" href="#video-chooser-upload-pane" data-toggle="tab">{{'上传视频'|trans}}</a></li>
         <li>
           <a href="#video-chooser-disk-pane" data-toggle="tab">
-            从资料库中选择
+            {{'从资料库中选择'|trans}}
           </a>
         </li>
 
         <li>
           <a href="#video-chooser-course-file" data-toggle="tab">
-            从课程文件中选择
+            {{'从课程文件中选择'|trans}}
           </a>
         </li>
 
-        <li><a href="#video-chooser-import-pane" data-toggle="tab">导入网络视频</a></li>
+        <li><a href="#video-chooser-import-pane" data-toggle="tab">{{'导入网络视频'|trans}}</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="video-chooser-upload-pane">
@@ -248,7 +248,7 @@
             data-base-url="{{ path('uploadfile_browser', {type:'video'}) }}"
             data-default-url="{{ path('uploadfile_browser', {type:'video', source:'upload'}) }}"
             data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
-            data-empty="暂无视频文件，请先上传。">
+            data-empty="{{'暂无视频文件，请先上传。'|trans}}">
             	<div class="file-browser-list-container"></div>
             </div>
         </div>
@@ -256,18 +256,18 @@
         <div class="tab-pane" id="video-chooser-course-file">
             <div id="file-browser-video" data-role="course-file-browser"
             data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'video'}) }}"
-            data-empty="暂无视频文件，请先上传。">
+            data-empty="{{'暂无视频文件，请先上传。'|trans}}">
             </div>
         </div>
 
         <div class="tab-pane" id="video-chooser-import-pane">
           <div class="input-group">
-            <input class="form-control" type="text" placeholder="支持优酷、土豆、腾讯、网易公开课的视频页面地址导入" data-role="import-url" >
+            <input class="form-control" type="text" placeholder="{{'支持优酷、土豆、腾讯、网易公开课的视频页面地址导入'|trans}}" data-role="import-url" >
             <span class="input-group-btn">
-              <button type="button" class="btn btn-default" data-role="import" data-url="{{ path('course_manage_media_import', {id:course.id}) }}" data-loading-text="正在导入，请稍等">导入</button>
+              <button type="button" class="btn btn-default" data-role="import" data-url="{{ path('course_manage_media_import', {id:course.id}) }}" data-loading-text="{{'正在导入，请稍等'|trans}}">{{'导入'|trans}}</button>
             </span>
           </div>
-          <strong class="text-danger">* 腾讯和网易的视频不支持手机端播放</strong>
+          <strong class="text-danger">* {{'腾讯和网易的视频不支持手机端播放'|trans}}</strong>
         </div>
       </div>
     </div>
@@ -281,19 +281,19 @@
   >
     <div class="file-chooser-bar"  style="display:none;">
       <span data-role="placeholder"></span>
-      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> 编辑</button>
+      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> {{'编辑'|trans}}</button>
     </div>
 
     <div class="file-chooser-main">
       <ul class="nav nav-pills nav-pills-sm mbs file-chooser-tabs">
-        <li><a class="file-chooser-uploader-tab" href="#audio-chooser-upload-pane" data-toggle="tab">上传音频</a></li>
+        <li><a class="file-chooser-uploader-tab" href="#audio-chooser-upload-pane" data-toggle="tab">{{'上传音频'|trans}}</a></li>
         <li><a href="#audio-chooser-disk-pane" data-toggle="tab">
-              从资料库中选择
+              {{'从资料库中选择'|trans}}
         </a></li>
 
         <li>
           <a href="#audio-chooser-course-file" data-toggle="tab">
-            从课程文件中选择
+            {{'从课程文件中选择'|trans}}
           </a>
         </li>
 
@@ -339,14 +339,14 @@
           		data-base-url="{{ path('uploadfile_browser', {type:'audio'}) }}"
             data-default-url="{{ path('uploadfile_browser', {type:'audio', source:'upload'}) }}"
             data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
-            data-empty="暂无音频文件，请先上传。">
+            data-empty="{{'暂无音频文件，请先上传。'|trans}}">
           		<div class="file-browser-list-container"></div>
           </div>
         </div>
 
         <div class="tab-pane" id="audio-chooser-course-file">
           <div id="file-browser-audio" data-role="course-file-browser"
-          data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'audio'}) }}" data-empty="暂无音频文件，请先上传。"></div>
+          data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'audio'}) }}" data-empty="{{'暂无音频文件，请先上传。'|trans}}"></div>
         </div>
 
       </div>
@@ -364,19 +364,19 @@
   >
     <div class="file-chooser-bar"  style="display:none;">
       <span data-role="placeholder"></span>
-      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> 编辑</button>
+      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> {{'编辑'|trans}}</button>
     </div>
 
     <div class="file-chooser-main">
       <ul class="nav nav-pills nav-pills-sm mbs file-chooser-tabs">
         <li><a class="file-chooser-uploader-tab" href="#ppt-chooser-upload-pane" data-toggle="tab">上传PPT</a></li>
         <li><a href="#ppt-chooser-disk-pane" data-toggle="tab">
-              从资料库中选择
+              {{'从资料库中选择'|trans}}
         </a></li>
 
          <li>
           <a href="#ppt-chooser-course-file" data-toggle="tab">
-            从课程文件中选择
+            {{'从课程文件中选择'|trans}}
           </a>
         </li>
 
@@ -409,14 +409,14 @@
           		data-base-url="{{ path('uploadfile_browser', {type:'ppt'}) }}"
             data-default-url="{{ path('uploadfile_browser', {type:'ppt', source:'upload'}) }}"
             data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
-          		data-empty="暂无PPT文件，请先上传。">
+          		data-empty="{{'暂无PPT文件，请先上传。'|trans}}">
           	<div class="file-browser-list-container"></div>
           </div>
         </div>
 
         <div class="tab-pane" id="ppt-chooser-course-file">
             <div id="file-browser-ppt" data-role="course-file-browser"
-            data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'ppt'}) }}" data-empty="暂无PPT文件，请先上传。"></div>
+            data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'ppt'}) }}" data-empty="{{'暂无PPT文件，请先上传。'|trans}}"></div>
         </div>
 
       </div>
@@ -433,19 +433,19 @@
   >
     <div class="file-chooser-bar"  style="display:none;">
       <span data-role="placeholder"></span>
-      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> 编辑</button>
+      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> {{'编辑'|trans}}</button>
     </div>
 
     <div class="file-chooser-main">
       <ul class="nav nav-pills nav-pills-sm mbs file-chooser-tabs">
-        <li><a class="file-chooser-uploader-tab" href="#document-chooser-upload-pane" data-toggle="tab">上传文档</a></li>
+        <li><a class="file-chooser-uploader-tab" href="#document-chooser-upload-pane" data-toggle="tab">{{'上传文档'|trans}}</a></li>
         <li><a href="#document-chooser-disk-pane" data-toggle="tab">
-              从资料库中选择
+              {{'从资料库中选择'|trans}}
         </a></li>
 
          <li>
           <a href="#document-chooser-course-file" data-toggle="tab">
-            从课程文件中选择
+            {{'从课程文件中选择'|trans}}
           </a>
         </li>
 
@@ -477,14 +477,14 @@
               data-base-url="{{ path('uploadfile_browser', {type:'document'}) }}"
             data-default-url="{{ path('uploadfile_browser', {type:'document', source:'upload'}) }}"
             data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
-              data-empty="暂无文档，请先上传。">
+              data-empty="{{'暂无文档，请先上传。'|trans}}">
             <div class="file-browser-list-container"></div>
           </div>
         </div>
 
         <div class="tab-pane" id="document-chooser-course-file">
             <div id="file-browser-document" data-role="course-file-browser"
-            data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'document'}) }}" data-empty="暂无文档，请先上传。"></div>
+            data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'document'}) }}" data-empty="{{'暂无文档，请先上传。'|trans}}"></div>
         </div>
 
       </div>
@@ -501,19 +501,19 @@
   >
     <div class="file-chooser-bar"  style="display:none;">
       <span data-role="placeholder"></span>
-      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> 编辑</button>
+      <button class="btn btn-link btn-sm" type="button" data-role="trigger"><i class="glyphicon glyphicon-edit"></i> {{'编辑'|trans}}</button>
     </div>
 
     <div class="file-chooser-main">
       <ul class="nav nav-pills nav-pills-sm mbs file-chooser-tabs">
-        <li><a class="file-chooser-uploader-tab" href="#flash-chooser-upload-pane" data-toggle="tab">上传Flash</a></li>
+        <li><a class="file-chooser-uploader-tab" href="#flash-chooser-upload-pane" data-toggle="tab">{{'上传Flash'|trans}}</a></li>
         <li><a href="#flash-chooser-disk-pane" data-toggle="tab">
-              从资料库中选择
+              {{'从资料库中选择'|trans}}
         </a></li>
 
          <li>
           <a href="#flash-chooser-course-file" data-toggle="tab">
-            从课程文件中选择
+            {{'从课程文件中选择'|trans}}
           </a>
         </li>
 
@@ -546,14 +546,14 @@
               data-base-url="{{ path('uploadfile_browser', {type:'flash'}) }}"
             data-default-url="{{ path('uploadfile_browser', {type:'flash', source:'upload'}) }}"
             data-my-sharing-contacts-url="{{ path('material_lib_my_sharing_contacts') }}"
-              data-empty="暂无Flash，请先上传。">
+              data-empty="{{'暂无Flash，请先上传。'|trans}}">
             <div class="file-browser-list-container"></div>
           </div>
         </div>
 
         <div class="tab-pane" id="flash-chooser-course-file">
             <div id="file-browser-flash" data-role="course-file-browser"
-            data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'flash'}) }}" data-empty="暂无Flash，请先上传。"></div>
+            data-url="{{ path('course_manage_material_browser', {courseId:targetId, type:'flash'}) }}" data-empty="{{'暂无Flash，请先上传。'|trans}}"></div>
         </div>
 
       </div>
