--- a/src/Topxia/WebBundle/Resources/views/CourseStudentManage/quit-record.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseStudentManage/quit-record.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaWebBundle:CourseStudentManage:index.html.twig' %}
 
-{% block title %}退出记录 - {{ parent() }}{% endblock %}
+{% block title %}{{'退出记录'|trans}} - {{ parent() }}{% endblock %}
 
 {% set submenu = 'record' %}
 
@@ -11,7 +11,7 @@
     <div class="form-group col-md-7">
       <input class="form-control " style="width:45%" type="text" placeholder="请输入用户名/邮箱/手机号" name="keyword" value="{{ app.request.get('keyword') }}">
 
-      <button class="btn btn-primary">搜索</button>
+      <button class="btn btn-primary">{{'搜索'|trans}}</button>
     </div>
     <div class="clearfix"></div>
   </form>
@@ -19,16 +19,16 @@
 	<table class="table table-striped" id="quit-record-list">
     <thead>
       <tr>
-        <th>学员名称</th>
-        <th width="30%">退出原因 </th>
-        <th>退出日期</th>
-        <th>退款状态</th>
-        <th>退款金额  
+        <th>{{'学员名称'|trans}}</th>
+        <th width="30%">{{'退出原因'|trans}}</th>
+        <th>{{'退出日期'|trans}}</th>
+        <th>{{'退款状态'|trans}}</th>
+        <th>{{'退款金额'|trans}}
           <span class="glyphicon glyphicon-question-sign text-muted" id="refund-coin-tips" data-toggle="tooltip" data-placement="bottom" href="javascript:" title="" data-original-title=""></span>
           <div id="refund-coin-tips-html" style="display:none;">
             <div style="width:150px;">
-              <span style="color:blue;">1.</span>仅显示通过现金购买加入的学员退款记录<br><br>
-              <span style="color:blue;">2.</span>班级课程退款情况请在班级管理中查看<br>
+              <span style="color:blue;">1.</span>{{'仅显示通过现金购买加入的学员退款记录'|trans}}<br><br>
+              <span style="color:blue;">2.</span>{{'班级课程退款情况请在班级管理中查看'|trans}}<br>
             </div>
           </div>
         </th>
@@ -38,7 +38,7 @@
       {% for refund in refunds %}        
         {% include 'TopxiaWebBundle:CourseStudentManage:quit-record-tr.html.twig' %}
       {% else %}
-        <tr class="empty"><td colspan="20">无学员记录</td></tr>
+        <tr class="empty"><td colspan="20">{{'无学员记录'|trans}}</td></tr>
       {% endfor %}
     </tbody>
   </table>
