--- a/src/Topxia/WebBundle/Resources/views/Default/friend-link.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Default/friend-link.html.twig
@@ -1,7 +1,7 @@
 {% if friendlyLinks %}
 <div class="es-friend-link">
   <div class="container">
-    <div class="title">友情链接：</div>
+    <div class="title">{{'友情链接：'|trans}}</div>
     <ul>
       {% for friendLink in friendlyLinks %}
       <li><a class="link-dark text-sm" href="{{ friendLink.url }}" {% if friendLink.isNewWin%}target="_blank"{% endif %}>{{friendLink.name}}</a></li>
