--- a/src/Topxia/WebBundle/Resources/views/EsBar/LeftList/study-center.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/EsBar/LeftList/study-center.html.twig
@@ -9,6 +9,6 @@
   </li>
 {% else %}
   <li data-id="#bar-user-center" class="bar-user">
-    <a href="javascript:;" data-url="{{ path('esbar_my_study_center') }}">{{'学<br>习<br>中<br>心</a>'|trans|raw}}
+    <a href="javascript:;" data-url="{{ path('esbar_my_study_center') }}">{{'学<br>习<br>中<br>心'|trans|raw}}</a>
   </li>
 {% endif %}
