--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -40,7 +40,7 @@
         <div class="form-group order-detail-bg">
           {% for payment, options in payments %}
             {% if payment == 'alipay' and is_micro_messenger() %}
-            <p class="color-danger">如需使用支付宝支付，请在其他浏览器中重新下单。<a id='copy' class="hidden" href='javascript:;'>复制地址</a></p>
+            <p class="color-danger">{{'如需使用支付宝支付，请在其他浏览器中重新下单。'|trans}}<a id='copy' class="hidden" href='javascript:;'>{{'复制地址'|trans}}</a></p>
             <div class="check disabled">
               {% set picture = 'assets/img/order/'~payment~'.png' %}
               <img src="{{ asset(picture) }}" />
@@ -83,7 +83,7 @@
         <div class="form-group">
           <div class="total-price">
             {{'应付金额：'|trans}}
-            <span role="pay-rmb" class="pay-rmb">￥{{order.amount}}</span>
+            <span role="pay-rmb" class="pay-rmb">{{'￥'|trans}}{{order.amount}}</span>
           </div>
         </div>
         <div class="form-group text-right">
