--- a/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
@@ -15,9 +15,9 @@
   <body style="overflow:hidden;border:0px;">
     {% if file|default(null) %}
       {% if file.storage == 'cloud' and file.type in ['ppt', 'document','video'] and file.convertStatus == 'error' %}
-        <div class="alert alert-danger">转码失败，请联系管理员。</div>
+        <div class="alert alert-danger">{{'转码失败，请联系管理员。'|trans}}</div>
       {% elseif file.storage == 'cloud' and file.type in ['ppt', 'document','video'] and file.convertStatus != 'success' %}
-        <div class="alert alert-danger">正在转码，请稍后尝试。</div>
+        <div class="alert alert-danger">{{'正在转码，请稍后尝试。'|trans}}</div>
       {% else %}
         <div style="position:absolute;top:0;bottom:0;left:0;right:0;text-align:center;">
           <div id="lesson-video-content"
