--- a/src/Topxia/WebBundle/Resources/views/Course/courses-block-grid.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/courses-block-grid.html.twig
@@ -39,7 +39,7 @@
             {% set lesson = course['lesson']|default(null) %}
             {% if lesson %}
               <span class="live-course-lesson metas">
-                <span class="text-success mrm">{{ lesson.startTime|date('n-j H:i') }} ~ {{ lesson.endTime|date('H:i') }}</span>
+                <span class="text-success mrm">{{ lesson.startTime|date('n月j日 H:i'|trans) }} ~ {{ lesson.endTime|date('H:i') }}</span>
                 <span class="text-muted mrm">{{'第%number%课时'|trans({'%number%': lessom.number})}}</span>
               </span>
             {% endif %}
