--- a/src/Topxia/WebBundle/Resources/public/js/controller/importer/template/error.html
+++ b/src/Topxia/WebBundle/Resources/public/js/controller/importer/template/error.html
@@ -1,5 +1,5 @@
 <div class="page-header clearfix">
-    <h1 class="pull-left">步骤2</h1>
+    <h1 class="pull-left">{{'步骤2'|trans}}</h1>
 </div>
 
 <div class="row">
@@ -8,6 +8,6 @@
             <div class="col-md-offset-2"><%= error %></div>
         <% }); %>
         <br>
-        <div class="col-md-offset-2"><a type="button" class="btn btn-primary" href="#index">重新导入</a></div>
+        <div class="col-md-offset-2"><a type="button" class="btn btn-primary" href="#index">{{'重新导入'|trans}}</a></div>
     </div>
 </div>
