--- a/src/Topxia/WebBundle/Resources/public/js/controller/importer/template/step1.html
+++ b/src/Topxia/WebBundle/Resources/public/js/controller/importer/template/step1.html
@@ -3,23 +3,23 @@
 </div>
 
 <div class="page-header clearfix">
-    <h1 class="pull-left">步骤1</h1>
+    <h1 class="pull-left">{{'步骤1'|trans}}</h1>
 </div>
 
 <div class="row">
     <form method="post" enctype="multipart/form-data" class="form-horizontal" >
 
         <div class="form-group">
-            <div class="col-md-3 col-md-offset-1"><b>选择要导入的文件</b></div>
+            <div class="col-md-3 col-md-offset-1"><b>{{'选择要导入的文件'|trans}}</b></div>
             <div class="col-md-8">
                 <div class="uploader blue">
                     <input type="text" class="filename" readonly="readonly" />
-                    <input type="button" name="excel-btn" class=" button" value="浏览..."/>
+                    <input type="button" name="excel-btn" class=" button" value="{{'浏览...'|trans}}"/>
                     <input type="file" size="30" name="excel"/>
                 </div>
-                &nbsp;&nbsp;<a href="<%= exampleUrl %>">点击下载示例说明文件</a>
+                &nbsp;&nbsp;<a href="<%= exampleUrl %>">{{'点击下载示例说明文件'|trans}}</a>
                 <br>
-                支持从Excel文件导入
+                {{'支持从Excel文件导入'|trans}}
             </div>
         </div>
         <br>
@@ -27,7 +27,7 @@
         <div class="form-group">
             <div class="col-md-3 col-md-offset-1"></div>
             <div class="col-md-8 controls">
-                <button type="submit" class="btn btn-primary" id="start-import-btn">开始校验数据</button>
+                <button type="submit" class="btn btn-primary" id="start-import-btn">{{'开始校验数据'|trans}}</button>
             </div>
         </div>
 
