--- a/src/Topxia/AdminBundle/Resources/views/User/approvals.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/approvals.html.twig
@@ -7,9 +7,9 @@
 {% block main %}
   <div class="btn-group">
     <a type="button" class="btn btn-default btn-sm {% if approvalStatus == 'approving' %}btn-primary{% endif %}"
-       href="{{ path('admin_approval_approvals',{approvalStatus: 'approving'}) }}">审核中</a>
+       href="{{ path('admin_approval_approvals',{approvalStatus: 'approving'}) }}">{{ '审核中'|trans }}</a>
     <a type="button" class="btn btn-default btn-sm {% if approvalStatus == 'approved' %}btn-primary{% endif %}"
-       href="{{ path('admin_approval_approvals',{approvalStatus: 'approved'}) }}">审核成功</a>
+       href="{{ path('admin_approval_approvals',{approvalStatus: 'approved'}) }}">{{ '审核成功'|trans }}</a>
   </div>
   <form id="user-search-form" class="form-inline well well-sm mtl" action="" method="get" novalidate>
    {% include 'OrgBundle:Org:org-tree-select.html.twig' with {orgCode: app.request.get('orgCode'), modal: 'list'} %}
@@ -21,31 +21,31 @@
     </div>
     <div class="form-group">
       <input type="text" id="keyword" name="keyword" class="form-control" value="{{ app.request.query.get('keyword') }}"
-             placeholder="关键词">
+             placeholder="{{ '关键词'|trans }}">
     </div>
     <div class="form-group">
-      申请时间:
+      {{ '申请时间:'|trans }}
       <input class="form-control" type="text" id="startDate" name="startDateTime"
-             value="{{ app.request.query.get('startDateTime') }}" placeholder="起始时间">
+             value="{{ app.request.query.get('startDateTime') }}" placeholder="{{ '起始时间'|trans }}">
       -
       <input class="form-control" type="text" id="endDate" name="endDateTime"
-             value="{{ app.request.query.get('endDateTime') }}" placeholder="结束时间">
+             value="{{ app.request.query.get('endDateTime') }}" placeholder="{{ '结束时间'|trans }}">
     </div>
-    <button class="btn btn-primary">搜索</button>
+    <button class="btn btn-primary">{{ '搜索'|trans }}</button>
   </form>
 
   {% if users %}
     <table id="user-table" class="table table-striped">
       <thead>
       <tr>
-        <th>ID</th>
-        <th>用户名</th>
+        <th>{{ 'ID'|trans }}</th>
+        <th>{{ '用户名'|trans }}</th>
         {% include 'OrgBundle:Org/Parts:table-thead-tr.html.twig' %}
-        <th>真实姓名</th>
-        <th>身份证号码</th>
-        <th>邮件</th>
-        <th>申请时间</th>
-        <th>操作</th>
+        <th>{{ '真实姓名'|trans }}</th>
+        <th>{{ '身份证号码'|trans }}</th>
+        <th>{{ '邮件'|trans }}</th>
+        <th>{{ '申请时间'|trans }}</th>
+        <th>{{ '操作'|trans }}</th>
       </tr>
       </thead>
       <tbody>
@@ -62,20 +62,20 @@
             {% if approvalStatus == 'approved' %}
               <div class="btn-group">
                 <a href="#modal" data-toggle="modal" data-url="{{ path('admin_approval_info_view', {id:user.id}) }}"
-                   class="btn btn-default btn-sm">查看</a>
+                   class="btn btn-default btn-sm">{{ '查看'|trans }}</a>
 
                 <a href="#" type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
                   <span class="caret"></span>
                 </a>
 
                 <ul class="dropdown-menu">
-                  <li><a data-url="{{ path('admin_approval_cancel', {id:user.id}) }}" class="btn cancel-approval">撤销</a>
+                  <li><a data-url="{{ path('admin_approval_cancel', {id:user.id}) }}" class="btn cancel-approval">{{ '撤销'|trans }}</a>
                   </li>
                 </ul>
               </div>
             {% elseif approvalStatus == 'approving' %}
               <a href="#modal" data-toggle="modal" data-url="{{ path('admin_approval_approve', {id:user.id}) }}"
-                 class="btn btn-default btn-sm">审核</a>
+                 class="btn btn-default btn-sm">{{ '审核'|trans }}</a>
             {% endif %}
           </td>
         </tr>
@@ -86,9 +86,9 @@
     {{ web_macro.paginator(paginator) }}
   {% else %}
     {% if approvalStatus == 'approved' %}
-      <div class="empty">暂无已经审核成功的实名认证用户</div>
+      <div class="empty">{{ '暂无已经审核成功的实名认证用户'|trans }}</div>
     {% elseif approvalStatus == 'approving' %}
-      <div class="empty">暂无需要审核中的实名认证用户</div>
+      <div class="empty">{{ '暂无需要审核中的实名认证用户'|trans }}</div>
     {% endif %}
   {% endif %}
 
