排查直播管理语言串

--- a/src/Topxia/AdminBundle/Resources/views/LiveCourse/tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/LiveCourse/tr.html.twig
@@ -17,7 +17,7 @@
     {% if course %}
       {{ course.maxStudentNum }}
     {% else %}
-      <span class="text-muted">{{'课程已删除'|trans}}</div>
+      <span class="text-muted">{{'课程已删除'|trans}}</span>
     {% endif %}
   </td>
   {#
