--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/lesson-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/lesson-modal.html.twig
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div class="form-group for-text-type for-video-type for-audio-type {% if storageSetting.upload_mode == 'cloud' %}for-ppt-type for-document-type for-flash-type{% endif %}" >
+  <div class="form-group for-text-type for-video-type for-audio-type {% if storageSetting.upload_mode|default('local') == 'cloud' %}for-ppt-type for-document-type for-flash-type{% endif %}" >
     <div class="col-md-2 control-label"><label for="lesson-title-field">{{'标题'|trans}}</label></div>
     <div class="col-md-9 controls">
       <div class="row">
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class="form-group for-text-type for-video-type for-audio-type {% if storageSetting.upload_mode == 'cloud' %}for-ppt-type for-document-type for-flash-type{% endif %}">
+  <div class="form-group for-text-type for-video-type for-audio-type {% if storageSetting.upload_mode|default('local') == 'cloud' %}for-ppt-type for-document-type for-flash-type{% endif %}">
     <div class="col-md-2 control-label"><label for="lesson-summary-field">{{'简介'|trans}}</label></div>
     <div class="col-md-9 controls"><textarea class="form-control" id="lesson-summary-field" name="summary" >{{ field_value(lesson, 'summary') }}</textarea>
 
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-  <div class="form-group for-video-type for-audio-type {% if storageSetting.upload_mode == 'cloud' %}for-ppt-type for-document-type for-flash-type{% endif %} ">
+  <div class="form-group for-video-type for-audio-type {% if storageSetting.upload_mode|default('local') == 'cloud' %}for-ppt-type for-document-type for-flash-type{% endif %} ">
     <div class="col-md-2 control-label for-video-type"><label>{{'视频'|trans}}</label></div>
     <div class="col-md-2 control-label for-audio-type"><label>{{'音频'|trans}}</label></div>
     <div class="col-md-2 control-label for-ppt-type"><label>PPT</label></div>
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <div class="form-group for-none-type {% if storageSetting.upload_mode != 'cloud' %}for-ppt-type{% endif %}">
+  <div class="form-group for-none-type {% if storageSetting.upload_mode|default('local') != 'cloud' %}for-ppt-type{% endif %}">
     <div class="col-md-offset-2 col-md-9">
       <div class="alert alert-info">
         <p>{{ 'PPT课时需要开通EduSoho云文档服务才能使用,'|trans|copyright_less }}
@@ -94,7 +94,7 @@
     </div>
   </div>
 
-  <div class="form-group for-none-type {% if storageSetting.upload_mode != 'cloud' %}for-document-type{% endif %}">
+  <div class="form-group for-none-type {% if storageSetting.upload_mode|default('local') != 'cloud' %}for-document-type{% endif %}">
     <div class="col-md-offset-2 col-md-9">
       <div class="alert alert-info">
         <p>{{ '文档课时需要开通EduSoho云文档服务才能使用,'|trans|copyright_less }}
@@ -103,7 +103,7 @@
     </div>
   </div>
 
-  <div class="form-group for-none-type {% if storageSetting.upload_mode != 'cloud' %}for-flash-type{% endif %}">
+  <div class="form-group for-none-type {% if storageSetting.upload_mode|default('local') != 'cloud' %}for-flash-type{% endif %}">
     <div class="col-md-offset-2 col-md-9">
       <div class="alert alert-info">
         <p>{{ 'Flash课时需要开通EduSoho云视频服务才能使用,'|trans|copyright_less }}
