附件支持预览和下载   小组话题增加附件上传

--- a/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
@@ -42,6 +42,7 @@
       </div>
 
       {{threadMain.content|raw}}
+      {{ render(controller('TopxiaWebBundle:Attachment:list', {targetType: 'thread', targetId: threadMain.id })) }}
       {% if attachs %}
         <hr>
         <span class="glyphicon glyphicon-paperclip"></span> {{'附件下载'|trans}} :
