--- a/src/Topxia/WebBundle/Resources/views/OpenCourseManage/open-course-students.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourseManage/open-course-students.html.twig
@@ -18,10 +18,10 @@
   <div class="panel-body">
     <ul class="nav nav-tabs">     
        <li {% if app.request.get('userType') == 'login' %}class="active"{% endif %}>
-          <a href="{{ path('open_course_manage_students',{id:course.id,userType:'login'}) }}">已登陆的</a>
+          <a href="{{ path('open_course_manage_students',{id:course.id,userType:'login'}) }}">已登陆</a>
        </li>
        <li {% if app.request.get('userType') == 'unlogin' %}class="active"{% endif %}>
-         <a href="{{ path('open_course_manage_students',{id:course.id,userType:'unlogin'}) }}">未登录的</a>
+         <a href="{{ path('open_course_manage_students',{id:course.id,userType:'unlogin'}) }}">未登录</a>
        </li>
     </ul>
 
