--- a/src/Topxia/AdminBundle/Resources/views/LiveCourse/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/LiveCourse/index.html.twig
@@ -35,7 +35,7 @@
       <th width="45%">{{'课时'|trans}}</th>
       {% include 'OrgBundle:Org/Parts:table-thead-tr.html.twig' %}
       <th>{{'直播开始时间'|trans}}</th>
-      <th>{{'直播时长(分)'|trans}}'|trans}}</th>
+      <th>{{'直播时长(分)'|trans}}</th>
       <th>{{'最大参与人数'|trans}}</th>
       {# <th>直播在线人数峰值</th> #}
     </tr>
